git-svn-id: https://www.seasar.org/svn/teeda/trunk@146 e0972215-f904-0410-97d3-99f68b247671